# conway-game-life-ratatui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
assets/rle2txt/: makefile  rle2txt  rle2txt.cpp  rle2txt.txt
src/: cell.rs  file_parser.rs  main.rs  parser.rs  universe.rs  universe_builder.rs
