[package]
name = "conway-game-life-ratatui"
description = "Conway's Game of Life in the CLI using ratatui"
repository = "https://github.com/LuMarans30/conway-game-life-ratatui"
license = "MIT"
version = "0.4.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
log = "0.4.26"
rand = "0.9.0"
ratatui = "0.29.0"
